--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,27 @@
+
+2
+3
+	
+body {
+    background-color: yellow;
+} 
+
+h1 {
+    background-color: green;
+}
+
+
+body {
+  line-height: 2.0;
+}
+
+p {
+    background-color:pink;
+} 
+
+   text-align:center; /*For IE6 Shenanigans*/
+}
+
 .offscreen {
   position: absolute;
   top: -30em;
